Mise à jour des tests Ajout de la documentation Quelques modifications mineures